--- a/src/pages/Evento/styleGeralEvento.css
+++ b/src/pages/Evento/styleGeralEvento.css
@@ -1,13 +1,13 @@
-.paginaCompleta {
+.noMarginPadding {
     margin: 0 !important;
     padding: 0 !important;
 }
 
 .corPagina {
-    background-color: #B3B5BD !important;
+    background-color: #F5F5F5 !important;
 }
 
 .larguraMainContentEventos {
-    width: 80vw;
+    width: 80vw!important;
     margin: 0 auto;
 }
